# Crawllama

./: .dockerignore  .encryption_key  .env.example  .gitignore  ADAPTIVE_CLI_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_STARTER.md  Dockerfile  INSTALLATION.md  Improvements.txt  LICENSE  LICENSE_INFO.md  MEMORY_BREACH_STORAGE.md  MISSING_FUNCTIONS_REPORT.md  README.md  REFACTORING_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS.md  SYSTEM_SCAN_REPORT.md  UNIFIED_LOADER_FINAL_REPORT.md  UNIFIED_LOADER_SUMMARY.md  V1.4.1_STATUS.md  VULNERABILITY_INTEL.md  _config.yml  _version.py  all_functions.txt  all_functions_complete.txt  app.py  check_issues.ps1  check_issues.py  check_packages.py  check_tests.py  cleanup_nul.bat  config.json  config.json.example  demo_v1.4.1.py  (+38 more)
.git-hooks/: README.md  pre-commit  pre-commit.bat  pre-push  pre-push.bat
.github/: CODEOWNERS  CODEQL_ALERTS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_ui_issue.yml  documentation.yml  feature_request.yml  feedback_suggestion.yml  improvement_enhancement.yml  security_issue.yml  support_request.yml  task_issue.yml  translation_localization.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bandit.yml  jekyll-gh-pages.yml  tests.yml
_layouts/: default.html
config/: .bandit  codeql-config.yml  config.json.example  qlpack.yml  social_intel_config.json
core/: __init__.py  adaptive_hops.py  adaptive_integration.py  agent.py  api_key_manager.py  audit_logger.py  cache.py  cloud_llm_client.py  context_manager.py  csrf_manager.py  fallback_manager.py  hallu_detect.py  langgraph_agent.py  lazy_loader.py  llm_client.py  memory_store.py  model_registry.py  plugin_manager.py  rbac_manager.py  registry.py  report_exporter.py  robustness.py  session_manager.py  unified_loader.py
core/agent/: __init__.py  agent.py  constants.py  osint_flow.py  session.py  tools_flow.py
core/health/: __init__.py  alert_system.py  component_checker.py  dashboard.py  integration.py  performance_tracker.py  result_parser.py  rich_dashboard.py  system_monitor.py  test_collector.py  test_runner.py  theme.py
core/memory/: __init__.py  breach.py  constants.py  export.py  operations.py  persistence.py  quotas.py  sanitization.py  store.py
core/osint/: README.md  __init__.py  _common.py  company_intel.py  compliance.py  domain_intel.py  email_intel.py  formatting.py  github_intel.py  ip_intel.py  linkedin_api_intel.py  linkedin_intel.py  phone_intel.py  query_enhancer.py  query_parser.py  social_intel.py  twitter_intel.py
data/: blacklist.txt
data/embeddings/: .gitkeep
data/exports/: .gitkeep
data/history/: .gitkeep
deployment/: crawllama.service
docs/: ADAPTIVE_HOPS.md  ADAPTIVE_HOPS_QUICKSTART.md  API_USAGE.md  CONFIG_SETUP.md  CONSOLIDATION_SUMMARY.md  DASHBOARD_STARTER.md  FUTURE_PLANS.md  HALLUCINATION_DETECTION.md  HEALTH_DASHBOARD.md  HEALTH_FEATURES.md  HEALTH_IMPLEMENTATION_SUMMARY.md  HEALTH_MONITORING.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  LANGGRAPH_GUIDE.md  NEW_FEATURES.md  OSINT_CACHE_FIX.md  OSINT_CONTEXT_USAGE.md  OSINT_EMAIL_PHONE_FIX.md  OSINT_Emphasized_Checklist.txt  OSINT_USAGE.md  OSINT_V1.4.1_USAGE.md  PLUGIN_TUTORIAL.md  PRE_RELEASE_CHECK.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  SEARCH_LIMITATIONS.md  SECRET_LEAK_RESPONSE.md  SOCIAL_INTELLIGENCE.md  STRUCTURE_CLEANUP_SUMMARY.md  TEXT_CLEANER_REFACTORING.md  UNIFIED_LOADER_MIGRATION.md  VALIDATORS_REFACTORING.md  checklist.txt  preuploadchecklist.txt  setup.md
docs/development/: 1.4.11-doc-audit-code-findings.md  1.4.7-Breachdata-update-plan.md  PRE_RELEASE_CHECK.md  PROJECT_STRUCTURE.md  RELEASE_PROCESS.md  SECRET_LEAK_RESPONSE.md
docs/features/: HEALTH_DASHBOARD.md  HEALTH_MONITORING.md  OSINT_CONTEXT_USAGE.md  OSINT_USAGE.md  OSINT_V1.4.1_USAGE.md  SOCIAL_INTELLIGENCE.md
docs/getting-started/: ADAPTIVE_HOPS_QUICKSTART.md  CONFIG_SETUP.md  INSTALLATION.md  QUICKSTART.md
docs/guides/: ADAPTIVE_HOPS.md  API_USAGE.md  CLI_PROVIDER_SELECTION.md  CLOUD_LLM_INTEGRATION.md  EXPORT_REPORT.md  HALLUCINATION_DETECTION.md  LANGGRAPH_GUIDE.md  PLUGIN_TUTORIAL.md  RAG_ANALYSIS.md  SEARCH_IMPROVEMENTS.md  SEARCH_LIMITATIONS.md
docs/health/: DASHBOARD_STARTER.md  HEALTH_DASHBOARD.md  HEALTH_FEATURES.md  HEALTH_MONITORING.md
docs/osint/: COMPANY_INTELLIGENCE.md  OSINT_CONTEXT_USAGE.md  OSINT_USAGE.md  PHONE_INTELLIGENCE.md  SOCIAL_INTELLIGENCE.md
docs/security/: 1.4.7-security_analysis_report.md  CODEQL_SECURITY_ANALYSIS.md  CODEQL_Sec-Volun-test.txt  SECRET_LEAK_RESPONSE.md  api-security-guide.md
examples/: adaptive_demo.py  app_integration_example.py
plugins/: example_plugin.py
scripts/: 1.4.4-all_functions_complete.txt  1.4.5_all_functions_complete.txt  all_functions_complete.txt  check_issues.py  check_packages.py  cleanup_memory.py  debug_ddgs.py  extract_all_functions.py  install-hooks.bat  install-hooks.sh  run-codeql.bat  run-codeql.sh  secret_scanner.py  uv-env.sh
static/: index.html
tests/: __init__.py  conftest.py  test_cache_async.py  test_domain_blacklist.py  test_domain_intel.py  test_error_simulation.py  test_fallback_manager.py  test_health_monitoring.py  test_integration.py  test_llm_client.py  test_multihop_reasoning.py  test_osint.py  test_osint_cache_fix.py  test_rate_limiter.py  test_safe_fetch.py  test_tiktoken.py  test_unified_loader.py  test_web_search.py
tests/core/: test_cache.py  (+3 more)
tools/: __init__.py  import_breaches.py  osint_tool.py  page_reader.py  rag.py  tool_registry.py  web_search.py  wiki_lookup.py
utils/: __init__.py  async_utils.py  cli_helper.py  cli_input.py  domain_blacklist.py  injection_detection.py  logger.py  parallel_search.py  privacy.py  proxy_validator.py  rate_limiter.py  redis_rate_limiter.py  resource_monitor.py  retry.py  safe_fetch.py  secure_config.py  secure_hash.py  text_cleaner.py  tor_mode.py  validators.py
wiki/: API-Reference.md  Architecture-Overview.md  Home.md  Plugin-Development.md  _Footer.md  _Sidebar.md
(+79 files in other folders)
